--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JW4NBXTL3R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JW4NBXTL3R');
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <title>Custom</title>
+    <title>AUTOGENER8 | AI Tools and Resources for Marketers</title>
+    <meta name="description" content="AUTOGENER8 provides AI tools and resources to help marketers achieve their marketing goals. From data extraction to content creation, AUTOGENER8 has the tools you need to succeed.">
     <link rel="stylesheet" href="styles.css">
 
 </head>
@@ -15,23 +25,21 @@
 
     <header class="site-header">
         <div class="wrapper site-header__wrapper container">
-            <a href="#" class="brand">Brand<span>.</span></a>
+            <a href="#" class="brand">AUTOGENER8<span>.</span></a>
             <nav class="nav">
                 <button class="nav__toggle" aria-expanded="false" type="button">
                     <i class="fa-solid fa-bars"></i>
                 </button>
                 <ul class="nav__wrapper">
-                    <li class="nav__item"><a href="#">Home</a></li>
-                    <li class="nav__item"><a href="#">About</a></li>
-                    <li class="nav__item"><a href="#">Services</a></li>
-                    <li class="nav__item"><a href="#">Hire us</a></li>
-                    <li class="nav__item"><a href="#">Contact</a></li>
+                    <li class="nav__item"><a href="https://autogener8.com/">Home</a></li>
+                    <li class="nav__item"><a href="https://autogener8.com/about/">About</a></li>  
+                    <li class="nav__item"><a href="https://autogener8.com/contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section class="hero container">
+<!--    <section class="hero container">
         <div>
             <h1>Main Heading <span>!</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ipsa, iste dicta illo voluptatibus
@@ -43,11 +51,13 @@
         <img src="./teacher.svg" alt="pic">
     </section>
 
+-->
+
     <!-- service section -->
 
     <section class="service section-connector container">
         <div class="section-title">
-            <h2>Service</h2>
+            <h2>GPT-3 Text Editor</h2>
             <div class="line"></div>
         </div>
 
@@ -91,7 +101,7 @@
 
         <div class="footer-left">
 
-            <p class="footer-links">
+<!--            <p class="footer-links">
                 <a class="link-1" href="#">Home</a>
 
                 <a href="#">Blog</a>
@@ -104,8 +114,10 @@
 
                 <a href="#">Contact</a>
             </p>
+            
+-->
 
-            <p>Company Name &copy; 2023</p>
+            <p>AUTOGENER8 &copy; 2023</p>
         </div>
 
     </footer>
